update git initializers varibles

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -8,7 +8,7 @@
       <div class="navbar-text text-right">
         <p><%= t('hyrax.footer.copyright_html') %></p>
         <p><%= t('hyrax.background_attribution_html') %></p>
-        <p>Build version: <a href="https://github.com/RepoCamp/ohsu-team-2/tree/<%= GIT_SHA %>"><%= BRANCH %> <%= GIT_SHA.truncate(8) %></span></p>
+        <p>Build: <a href="https://github.com/RepoCamp/ohsu-team-2/tree/<%= GIT_SHA %>"><%= BRANCH %> <%= GIT_DATE %></a></p>
       </div>
     </div>
   </div>
